--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,16 @@
 # WordPress specific
 wp-config.php
 wp-content/uploads/
-wp-content/cache/
-wp-content/backup-db/
-wp-content/backups/
 wp-content/blogs.dir/
 wp-content/upgrade/
-wp-content/uploads/
-wp-content/wp-cache-config.php
-wp-content/plugins/hello.php
 
-# Node modules
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Plugin specific - temp files
+*.tmp
+*.backup
+*.bak
+*.log
 
-# IDE files
+# Development files
 .vscode/
 .idea/
 *.swp
@@ -32,59 +26,55 @@ yarn-error.log*
 ehthumbs.db
 Thumbs.db
 
-# Logs
-*.log
+# Node modules (if any)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
+# Composer (if any)
+vendor/
+composer.phar
 
-# Coverage directory used by tools like istanbul
-coverage/
+# Test results
+test-results/
+playwright-report/
+test-output/
 
-# Temporary folders
-tmp/
-temp/
-
-# Build outputs
-dist/
-build/
-out/
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local 
-
-# WordPress Plugin - Modern Admin Styler V2
-# Ignore test files and temporary artifacts
-
-# Test directories and files
-/tests/
-/test-results/
-/playwright/
-/a/
-*.spec.js
-playwright*.config.js
-package*.json
-*.png
-*.webm
-*.zip
-*.html
-diagnostic-screenshot.png
-
-# Development artifacts
+# Documentation files (keeping only README.md)
 *.md
 !README.md
+!CONTRIBUTING.md
+!LICENSE.md
 
-# Temporary files
-*.tmp
-*.bak
+# Temporary WordPress files
+*.php~
+error_log
 
-# Build artifacts
+# Cache files
+wp-content/cache/
+wp-content/w3tc-config/
+
+# Environment files
+.env
+.env.local
+.env.production
+
+# Screenshots and diagnostic files
+*.png
+*.jpg
+*.jpeg
+*.gif
+diagnostic-*
+
+# JavaScript build files
+/dist/
 /build/
-/dist/ 
+
+# Package manager files
+package-lock.json
+yarn.lock
+
+# IDE files
+*.sublime-project
+*.sublime-workspace 
